--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   font_awesome_flutter: ^10.4.0
   animated_text_kit: ^4.2.2
   flutter_svg: ^2.0.4
+  adaptive_navbar: ^0.0.3
   
 
 dev_dependencies:
