--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -75,9 +75,10 @@ flutter:
   fonts:
     - family: FiraCode
       fonts:
-        - asset: assets/fonts/FiraCode-Regular.ttf
-        - asset: assets/fonts/FiraCode-Bold.ttf
-        - asset: assets/fonts/FiraCode-Light.ttf
-        - asset: assets/fonts/FiraCode-SemiBold.ttf
+        # - asset: assets/fonts/FiraCode-Medium.ttf
+        - asset: assets/fonts/Fira_Code/FiraCode-Regular.ttf
+        # - asset: assets/fonts/FiraCode-Bold.ttf
+        # - asset: assets/fonts/FiraCode-Light.ttf
+        # - asset: assets/fonts/FiraCode-SemiBold.ttf
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
