--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   adaptive_navbar: ^0.0.3
   animated_text_kit: ^4.2.2
   cupertino_icons: ^1.0.2
+  firebase_core: ^2.15.1
   flutter:
     sdk: flutter
   flutter_svg: ^2.0.5
