contact section part 1

--- a/web/manifest.json
+++ b/web/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "niransnarayanan",
-    "short_name": "niransnarayanan",
+    "name": "website_flutter",
+    "short_name": "website_flutter",
     "start_url": ".",
     "display": "standalone",
     "background_color": "#0175C2",
