--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   firebase_core: ^2.15.1
   flutter:
     sdk: flutter
+  flutter_staggered_grid_view: ^0.7.0
   flutter_svg: ^2.0.5
   font_awesome_flutter: ^10.7.0
   google_fonts: ^4.0.3
