--- a/.github/workflows/firebase-hosting.yml
+++ b/.github/workflows/firebase-hosting.yml
@@ -17,7 +17,13 @@ jobs:
       - name: Set up Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: '20'  # You can adjust the Node.js version if needed
+          node-version: '20'  # Ensure this matches the environment requirements
+
+      - name: Display Node.js version
+        run: node -v  # Check the actual Node.js version being used
+
+      - name: Display npm version
+        run: npm -v  # Check the npm version
 
       - name: Install Firebase CLI
         run: npm install -g firebase-tools
@@ -26,5 +32,5 @@ jobs:
         env:
           FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }}
         run: |
-          cd web  # Adjust if your website folder has a different name
+          cd web  # Ensure this matches your folder structure
           firebase deploy --only hosting
