--- a/.github/workflows/firebase-hosting.yml
+++ b/.github/workflows/firebase-hosting.yml
@@ -30,13 +30,13 @@ jobs:
 
       - name: Clone repository
         uses: actions/checkout@v4
-        
+
       - name: Set up Flutter
         uses: subosito/flutter-action@v2
         with:
           channel: stable
       - run: flutter pub get
-      - run: flutter test
+      # - run: flutter test
       - run: flutter build web
 
       - name: Deploy to Firebase Hosting
