--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,8 +30,11 @@ environment:
 dependencies:
   adaptive_navbar: ^0.0.3
   animated_text_kit: ^4.2.2
+  cloud_firestore: ^5.4.1
   cupertino_icons: ^1.0.2
-  firebase_core: ^2.15.1
+  firebase_core: ^3.4.1 
+  firebase_storage: ^12.3.0
+  firebase_auth: ^5.2.1
   flutter:
     sdk: flutter
   flutter_staggered_grid_view: ^0.7.0
