--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,16 +32,20 @@ dependencies:
   animated_text_kit: ^4.2.2
   cloud_firestore: ^5.4.1
   cupertino_icons: ^1.0.2
-  firebase_core: ^3.4.1 
-  firebase_storage: ^12.3.0
+  file_picker: ^8.1.2
   firebase_auth: ^5.2.1
+  firebase_core: ^3.4.1
+  firebase_storage: ^12.3.0
   flutter:
     sdk: flutter
   flutter_staggered_grid_view: ^0.7.0
   flutter_svg: ^2.0.5
   font_awesome_flutter: ^10.7.0
   google_fonts: ^4.0.3
+  html: ^0.15.4
+  image_picker: ^1.1.2
   intl: ^0.19.0
+  path: ^1.9.0
   provider: ^6.0.5
   url_launcher: ^6.1.10
 
