--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,10 +44,12 @@ dependencies:
   google_fonts: ^4.0.3
   html: ^0.15.4
   image_picker: ^1.1.2
+  image_picker_for_web: ^3.0.5
   intl: ^0.19.0
   path: ^1.9.0
   provider: ^6.0.5
   url_launcher: ^6.1.10
+  uuid: ^4.5.0
 
 dev_dependencies:
   flutter_lints: ^2.0.0
