--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ environment:
 dependencies:
   adaptive_navbar: ^0.0.3
   animated_text_kit: ^4.2.2
+  cached_network_image: ^3.4.1
   cloud_firestore: ^5.4.1
   cupertino_icons: ^1.0.2
   file_picker: ^8.1.2
@@ -43,6 +44,7 @@ dependencies:
   font_awesome_flutter: ^10.7.0
   google_fonts: ^4.0.3
   html: ^0.15.4
+  image_network: ^2.5.6
   image_picker: ^1.1.2
   image_picker_for_web: ^3.0.5
   intl: ^0.19.0
