--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,7 @@
         "aboutme",
         "ARGB",
         "cupertino",
+        "enddate",
         "Fira",
         "firestore",
         "mydata",
