--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,11 +2,19 @@
     "cSpell.words": [
         "aboutme",
         "ARGB",
+        "Astro",
         "cupertino",
         "enddate",
+        "Eyantra",
         "Fira",
         "firestore",
+        "GDSC",
+        "Guwahati",
+        "IITB",
+        "Microcontrollers",
         "mydata",
+        "Neutrobix",
+        "Omni",
         "prepopulate",
         "startdate"
     ]
